chore/pull spring out of model